say hello to our TrackResource - we are almost ready to go back to the frontend (thanks CoPilot my new fast friend! :)